polist code: 1: generic profile context, 2 progress report in profile (#241)
* polist code: 1: generic profile context, 2 progress report in profile

* add profile progress bar

* override preprocessed_data when profiling

* polish code

* polish code

---------

Co-authored-by: Xuanlei Zhao <xuanlei.zhao@gmail.com>

--- a/examples/training/open_sora/configs/benchmarks/dynamic_ga.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dynamic_ga.yaml
@@ -1,8 +1,10 @@
 image_mixing_frac: 5
 zipf_offset: 15
-outputs: exp/baseline
-profile_path: exp/profile/baseline
-sp_size: 2
+outputs: exp/dynamic_ga
+profile_path: exp/profile/dynamic_ga
+dynamic_sp: true
+dynamic_recompute: true
+auto_grad_accumulation: true
 dummy_dataset: true
 
 
