--- a/examples/training/open_sora/configs/benchmarks/dynamic_sp.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dynamic_sp.yaml
@@ -1,8 +1,8 @@
 image_mixing_frac: 5
 zipf_offset: 15
-outputs: exp/baseline
-profile_path: exp/profile/baseline
-sp_size: 2
+outputs: exp/dynamic_sp
+profile_path: exp/profile/dynamic_sp
+dynamic_sp: true
 dummy_dataset: true
 
 
