update benchmark config

--- a/examples/training/open_sora/configs/benchmarks/bench_base.yaml
+++ b/examples/training/open_sora/configs/benchmarks/bench_base.yaml
@@ -4,6 +4,7 @@ outputs: exp/baseline
 profile_path: exp/profile/baseline
 sp_size: 2
 dummy_dataset: true
+dummy_data_size: 4000
 
 
 # ==== training config ====
@@ -38,7 +39,6 @@ bucket_config:
   "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
   "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
-  "1080p": {1: [1.0, 5], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
 
 # mask
 mask_ratios: {
