--- a/examples/training/open_sora/configs/benchmarks/dynamic_sp_ga.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dynamic_sp_ga.yaml
@@ -6,6 +6,7 @@ dynamic_sp: true
 dynamic_recompute: false
 auto_grad_accumulation: true
 dummy_dataset: true
+dummy_data_size: 4000
 
 
 # ==== training config ====
@@ -40,7 +41,6 @@ bucket_config:
   "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
   "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
-  "1080p": {1: [1.0, 5], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
 
 # mask
 mask_ratios: {
