add common ar override

--- a/examples/training/open_sora/configs/benchmarks/dynamic_ckpt_ga.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dynamic_ckpt_ga.yaml
@@ -42,6 +42,11 @@ bucket_config:
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
   "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
 
+# override default common ar
+# common_ar:
+#   "144p": {"1.78": [256, 144]}
+#   "720p": {"1.00": [960, 960]}
+
 # mask
 mask_ratios: {
     "random": 0.01,
