--- a/examples/training/open_sora/configs/benchmarks/dcp_inter.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_inter.yaml
@@ -1,7 +1,6 @@
-image_mixing_frac: 5
 zipf_offset: 15
-outputs: exp/dynamic_sp_ga
-profile_path: exp/profile/dynamic_sp_ga
+outputs: exp/dcp_inter
+profile_path: exp/profile/dcp_inter
 dynamic_sp: true
 dynamic_recompute: false
 auto_grad_accumulation: true
