--- a/examples/training/open_sora/configs/benchmarks/dcp_intra_ckpt.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_intra_ckpt.yaml
@@ -1,6 +1,6 @@
 zipf_offset: 15
-outputs: debug/test
-profile_path: debug/profile/test
+outputs: exp/dcp_intra_ckpt
+profile_path: exp/profile/dcp_intra_ckpt
 dynamic_sp: true
 dynamic_recompute: true
 dummy_dataset: true
@@ -34,7 +34,21 @@ warmup_steps: 10
 # data
 num_bucket_build_workers: 16
 bucket_config:
-  "720p": {408: [1.0, 2]}
+  "144p": {1: [1.0, 345], 51: [1.0, 48], 102: [1.0, 25], 204: [1.0, 12], 408: [1.0, 6]}
+  "240p": {1: [1.0, 128], 51: [1.0, 16], 102: [1.0, 8], 204: [1.0, 4], 408: [1.0, 2]}
+  "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
+  "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
+  "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
+
+# override default common ar
+# for benchmark, we use single ar for all resolutions
+# otherwise the data will be too sparse
+common_ar:
+  "144p": {"0.56": [144, 256]}
+  "240p": {"0.56": [240, 426]}
+  "360p": {"0.56": [360, 640]}
+  "480p": {"0.56": [480, 854]}
+  "720p": {"0.56": [720, 1280]}
 
 # mask
 mask_ratios: {
