--- a/examples/training/open_sora/configs/train.yaml
+++ b/examples/training/open_sora/configs/train.yaml
@@ -6,25 +6,26 @@ preprocessed_data: true
 # preprocessed_data: false
 
 # train
-ckpt_path: "hpcai-tech/OpenSora-STDiT-v3"
-profile_path: exp/profile
+ckpt_path: null
+profile_path: exp/profile/train
+outputs: exp/run/train
 grad_checkpoint: True
 num_workers: 8
 dtype: "bf16"
-plugin: "zero2"
+sp_size: 4
 
 # data centric parallel
 alloc_memory_fraction: 0.65  # if communication(nccl) error, try to decrease this value
-dynamic_sp: true
+# dynamic_sp: true
 # dynamic_recompute: true
 # auto_grad_accumulation: true
 
 # log
 seed: 42
 wandb: true
-epochs: 10
+epochs: 100
 log_every: 1
-ckpt_every: 100
+ckpt_every: 200
 
 # optimization
 grad_clip: 1.0
@@ -40,7 +41,6 @@ bucket_config:
   "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
   "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
-  "1080p": {1: [1.0, 5], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
 
 # mask
 mask_ratios: {
@@ -55,3 +55,10 @@ mask_ratios: {
     "image_tail": 0.005,
     "image_head_tail": 0.005,
 }
+
+common_ar:
+  "144p": {"0.56": [144, 256]}
+  "240p": {"0.56": [240, 426]}
+  "360p": {"0.56": [360, 640]}
+  "480p": {"0.56": [480, 854]}
+  "720p": {"0.56": [720, 1280]}
