dsp from spatial dim

--- a/examples/training/open_sora/configs/benchmarks/baseline.yaml
+++ b/examples/training/open_sora/configs/benchmarks/baseline.yaml
@@ -4,6 +4,8 @@ profile_path: exp/profile/baseline
 sp_size: 4
 dummy_dataset: true
 dummy_data_size: 4000
+verbose: true
+calculate_imbalance: true
 
 
 # ==== training config ====
