--- a/examples/training/open_sora/configs/benchmarks/dcp_inter.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_inter.yaml
@@ -6,6 +6,8 @@ dynamic_recompute: false
 auto_grad_accumulation: true
 dummy_dataset: true
 dummy_data_size: 4000
+verbose: true
+calculate_imbalance: true
 
 
 # ==== training config ====
