--- a/examples/training/open_sora/configs/benchmarks/dcp_intra.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_intra.yaml
@@ -5,6 +5,8 @@ dynamic_sp: true
 dynamic_recompute: false
 dummy_dataset: true
 dummy_data_size: 4000
+verbose: true
+calculate_imbalance: true
 
 
 # ==== training config ====
