--- a/examples/training/open_sora/configs/benchmarks/dcp_intra.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_intra.yaml
@@ -3,6 +3,7 @@ outputs: exp/dcp_intra
 profile_path: exp/profile/dcp_intra
 dynamic_sp: true
 dynamic_recompute: false
+auto_grad_accumulation: false
 dummy_dataset: true
 dummy_data_size: 4000
 verbose: true
