--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==2.1.1
 click==8.1.7
-colossalai==0.3.7
+colossalai
 contexttimer==0.3.3
 cryptography==43.0.3
 decorator==5.1.1
