--- a/examples/training/open_sora/configs/benchmarks/dcp_inter_ckpt.yaml
+++ b/examples/training/open_sora/configs/benchmarks/dcp_inter_ckpt.yaml
@@ -8,6 +8,7 @@ dummy_dataset: true
 dummy_data_size: 4000
 verbose: true
 calculate_imbalance: true
+max_grad_accumulation_steps: 5
 
 
 # ==== training config ====
