--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ nodeenv==1.9.1
 numpy==1.26.3
 nvidia-ml-py==12.560.30
 omegaconf==2.3.0
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.1
 pandarallel==1.6.5
 pandas==2.2.3
