--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,26 @@
-aiosignal==1.3.1
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-attrs==24.2.0
-av==13.1.0
-bcrypt==4.2.0
-beartype==0.19.0
-beautifulsoup4==4.12.3
-torch==2.1.2
-certifi==2022.12.7
-cffi==1.17.1
-cfgv==3.4.0
-charset-normalizer==2.1.1
-click==8.1.7
+accelerate>0.17.0
+bs4
+click
 colossalai
-contexttimer==0.3.3
-cryptography==43.0.3
-decorator==5.1.1
-deepspeed==0.14.4
-Deprecated==1.2.14
+contexttimer
 diffusers==0.30.0
-dill==0.3.9
-distlib==0.3.9
-docker-pycreds==0.4.0
-einops==0.8.0
-fabric==3.2.2
-filelock==3.13.1
-frozenlist==1.5.0
-fsspec==2024.2.0
-ftfy==6.3.1
-gitdb==4.0.11
-GitPython==3.1.43
-google==3.0.0
-hjson==3.1.0
-huggingface-hub==0.23.4
-identify==2.6.1
-idna==3.4
-imageio==2.36.0
-importlib_metadata==8.5.0
-invoke==2.2.0
-Jinja2==3.1.3
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mpmath==1.3.0
-msgpack==1.1.0
-networkx==3.2.1
-ninja==1.11.1.1
-nodeenv==1.9.1
-numpy==1.26.3
-nvidia-ml-py==12.560.30
-omegaconf==2.3.0
-opencv-python-headless==4.10.0.84
-packaging==24.1
-pandarallel==1.6.5
-pandas==2.2.3
-paramiko==3.5.0
-pillow==10.2.0
-platformdirs==4.3.6
-pre_commit==4.0.1
-protobuf==5.28.3
-psutil==6.1.0
-py-cpuinfo==9.0.0
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyNaCl==1.5.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-ray==2.38.0
-referencing==0.35.1
-regex==2024.9.11
-requests==2.28.1
-rich==13.9.3
-rotary-embedding-torch==0.5.3
-rpds-py==0.20.1
-safetensors==0.4.5
-sentencepiece==0.2.0
-sentry-sdk==2.17.0
-setproctitle==1.3.3
-six==1.16.0
-smmap==5.0.1
-soupsieve==2.6
-sympy==1.13.1
-timm==0.9.16
-tokenizers==0.15.2
-torchaudio==2.1.2
-torchvision==0.16.2
-tqdm==4.66.6
-transformers==4.36.2
-triton==2.1.0
-typing_extensions==4.9.0
-tzdata==2024.2
-urllib3==1.26.13
-virtualenv==20.27.1
-wandb==0.18.5
-wcwidth==0.2.13
-wrapt==1.16.0
-xformers==0.0.23.post1
-zipp==3.20.2
+einops
+fabric
+ftfy
+imageio
+imageio-ffmpeg
+matplotlib
+ninja
+numpy<2.0.0
+omegaconf
+packaging
+psutil
+pydantic
+ray
+rich
+safetensors
+sentencepiece
+timm
+torch>=1.13
+tqdm
+transformers==4.39.3
