[feat] data centric parallel training  (#234)
* rename and update

* update import except parallel mgr

* update parallel mgr

* remove logger init

* update ignore and requirements

* update assets

* rename and reorganize

* update io and logger

* fix name

* fix sp for frame=1

* remove useless args

* fix set sp size

* add iter-wise sp-balance (#235)

* update logger

* fix bug in log

* update fps split

* fix cp shard for frame=1

* fix baseline sampler

* fix bug for auto recompute

* update train

* remove redundant datasets and dataloader

* update preprocess

* seperate preprocess

* fix print

* finish preprocess and train

* skip attention if seq len = 1

* remove scripts and add yamls

* remove useless statements

* fix bug in mask padding for frame=1

* polish code (#237)

* polish code

* polish

* update yaml

* update yaml

* fix bugs

* update csv

* roll back to spatial temporal ckpt (#240)

* roll back to spatial temporal ckpt

* polish code

---------

Co-authored-by: Xuanlei Zhao <xuanlei.zhao@gmail.com>

* polist code: 1: generic profile context, 2 progress report in profile (#241)

* polist code: 1: generic profile context, 2 progress report in profile

* add profile progress bar

* override preprocessed_data when profiling

* polish code

* polish code

---------

Co-authored-by: Xuanlei Zhao <xuanlei.zhao@gmail.com>

* add benchmark config for sp+ga

* Reorg (#242)

* update benchmark config

* add common ar override

* update ar config and fix bug

---------

Co-authored-by: Xuanlei Zhao <xuanlei.zhao@gmail.com>

* update imbalance (#244)

* Debug (#243)

* model optimization: 1. dedup norm, 2. fused RMS norm, 3. always flash attention

* 1. finetune attention kernel dispatch for OpenSora 2. fix bug in profiler

* update config for benchmarks

* merge imbalance

* fix oom bug and add fall back for rms kernel

----

--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,9 @@ coverage.xml
 .coverage
 .testmondata*
 
+# videosys ignore
 pretrained
 samples
 cache_dir
 test_outputs
-datasets
+eval/pab/webvid/datasets
