--- a/examples/training/open_sora/configs/train.yaml
+++ b/examples/training/open_sora/configs/train.yaml
@@ -26,6 +26,7 @@ wandb: true
 epochs: 100
 log_every: 1
 ckpt_every: 1000
+# drop_last: true # disable for toy exp
 
 # optimization
 grad_clip: 1.0
@@ -36,11 +37,11 @@ warmup_steps: 10
 # data
 num_bucket_build_workers: 16
 bucket_config:
-  "144p": {1: [1.0, 345], 51: [1.0, 48], 102: [1.0, 25], 204: [1.0, 12], 408: [1.0, 6]}
-  "240p": {1: [1.0, 128], 51: [1.0, 16], 102: [1.0, 8], 204: [1.0, 4], 408: [1.0, 2]}
-  "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
+  # "144p": {1: [1.0, 345], 51: [1.0, 48], 102: [1.0, 25], 204: [1.0, 12], 408: [1.0, 6]}
+  # "240p": {1: [1.0, 128], 51: [1.0, 16], 102: [1.0, 8], 204: [1.0, 4], 408: [1.0, 2]}
+  # "360p": {1: [1.0, 64], 51: [1.0, 7], 102: [1.0, 4], 204: [1.0, 2], 408: [1.0, 1]}
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
-  "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
+  # "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
 
 # mask
 mask_ratios: {
